# MSR_PR_sentiment

./: FINAL_REPORT.md  friction_project.md  main.py  paper.md  pyproject.toml
results/run_20251124_154355/: SUMMARY.txt
results/run_20251124_154355/data/: analyzed_comments.csv  friction_stats_by_agent.csv  full_results.pkl  statistical_tests.csv  temporal_trends.csv  topic_agent_matrix.csv  topic_info.csv
results/run_20251205_221034/: SUMMARY.txt
results/run_20251205_221034/data/: category_agent_matrix.csv  category_counts.csv  category_friction_stats.csv  friction_stats_by_agent.csv  full_results.pkl  statistical_tests.csv  temporal_trends.csv  topic_agent_matrix.csv  topic_info.csv
results/run_20251211_111305/: SUMMARY.txt
results/run_20251211_111305/data/: category_agent_matrix.csv  full_results.pkl  statistical_tests.csv  topic_agent_matrix.csv  topic_info.csv
results/run_20251211_143049/: SUMMARY.txt
results/run_20251211_143049/data/: category_counts.csv  category_friction_stats.csv  friction_stats_by_agent.csv  full_results.pkl  temporal_trends.csv  topic_agent_matrix.csv  topic_info.csv
results/run_20251213_102941/: SUMMARY.txt
results/run_20251213_102941/data/: category_agent_matrix.csv  category_counts.csv  category_friction_stats.csv  friction_stats_by_agent.csv  full_results.pkl  statistical_tests.csv  temporal_trends.csv  topic_agent_matrix.csv  topic_info.csv
